--- a/views/header.jade
+++ b/views/header.jade
@@ -34,7 +34,7 @@ header.main-header
 									// start message
 									a(href='#')
 										.pull-left
-											img.img-circle(src='dist/img/user2-160x160.jpg' alt='User Image')
+											img.img-circle(src='image/no-image.png' alt='User Image')
 										|                                         
 										h4
 											| Support Team
@@ -47,7 +47,7 @@ header.main-header
 								li
 									a(href='#')
 										.pull-left
-											img.img-circle(src='dist/img/user3-128x128.jpg' alt='User Image')
+											img.img-circle(src='image/no-image.png' alt='User Image')
 										|                                         
 										h4
 											| AdminLTE Design Team
@@ -60,7 +60,7 @@ header.main-header
 								li
 									a(href='#')
 										.pull-left
-											img.img-circle(src='dist/img/user4-128x128.jpg' alt='User Image')
+											img.img-circle(src='image/no-image.png' alt='User Image')
 										|                                         
 										h4
 											| Developers
@@ -73,7 +73,7 @@ header.main-header
 								li
 									a(href='#')
 										.pull-left
-											img.img-circle(src='dist/img/user3-128x128.jpg' alt='User Image')
+											img.img-circle(src='image/no-image.png' alt='User Image')
 										|                                         
 										h4
 											| Sales Department
@@ -86,7 +86,7 @@ header.main-header
 								li
 									a(href='#')
 										.pull-left
-											img.img-circle(src='dist/img/user4-128x128.jpg' alt='User Image')
+											img.img-circle(src='image/no-image.png' alt='User Image')
 										|                                         
 										h4
 											| Reviewers
@@ -201,14 +201,14 @@ header.main-header
 				// User Account: style can be found in dropdown.less
 				li.dropdown.user.user-menu
 					a.dropdown-toggle(href='#' data-toggle='dropdown')
-						img.user-image(src='dist/img/user2-160x160.jpg' alt='User Image')
+						img.user-image(src='image/no-image.png' alt='User Image')
 						|                         
 						span.hidden-xs Alexander Pierce
 					|                     
 					ul.dropdown-menu
 						// User image
 						li.user-header
-							img.img-circle(src='dist/img/user2-160x160.jpg' alt='User Image')
+							img.img-circle(src='image/no-image.png' alt='User Image')
 							|                             
 							p
 								| Alexander Pierce - Web Developer
