--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,6 +31,8 @@ html(lang='en' ng-app='Beep')
 		script(src='bower_components/angular/angular.min.js')
 		|         
 		script(src='bower_components/angular-route/angular-route.min.js')
+		|         
+		script(src='dist/js/app.js')
 		// HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
 		// WARNING: Respond.js doesn't work if you view the page via file://
 		//if lt IE 9
