--- a/views/tag/index.jade
+++ b/views/tag/index.jade
@@ -1,22 +1,24 @@
-.row
-	a.btn.btn-primary.pull-right(ng-href='/admin/tag/create')
-		i.fa.fa-plus
-	| 	
-	table.table.table-hover
-		thead
-			tr
-				th Name
-				| 				
-				th Slug
-		| 		
-		tfoot
-			tr
-				th Name
-				| 				
-				th Slug
-		| 		
-		tbody
-			tr
-				td
-				| 				
-				td
+extends ../layout
+block content
+	.row
+		a.btn.btn-primary.pull-right(ng-href='/admin/tag/create')
+			i.fa.fa-plus
+		| 	
+		table.table.table-hover
+			thead
+				tr
+					th Name
+					| 				
+					th Slug
+			| 		
+			tfoot
+				tr
+					th Name
+					| 				
+					th Slug
+			| 		
+			tbody
+				tr
+					td
+					| 				
+					td
