--- a/views/admin/partials/post/create.html
+++ b/views/admin/partials/post/create.html
@@ -1,7 +1,7 @@
 <div ng-controller="PostController">
 	<div class="row">
 		<div class="col-md-12 col-lg-12">
-			<form autocomplete="off" ng-submit="createPost()">
+			<form autocomplete="off" ng-submit="create()">
 				<div class="row">
 					<div class="col-sm-6 col-md-6 col-lg-6">
 						<div class="box box-primary">
