--- a/views/admin/partials/post/index.jade
+++ b/views/admin/partials/post/index.jade
@@ -7,7 +7,7 @@ div(ng-controller='PostController' ng-init='getList()')
 				i.fa.fa-plus
 		| 		
 		.box-body
-			table.table.table-hover.table-striped.datatable
+			table.table.table-hover.table-striped
 				thead
 					tr
 						th ID
