--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -1,114 +1,265 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="Beep">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>AdminLTE 2 | Dashboard</title>
-        <!-- Tell the browser to be responsive to screen width -->
-        <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-        <!-- Bootstrap 3.3.5 -->
-        <link rel="stylesheet" href="/bower_components/AdminLTE/bootstrap/css/bootstrap.min.css">
-        <!-- Font Awesome -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-        <!-- Ionicons -->
-        <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-        <!-- jvectormap -->
-        <link rel="stylesheet" href="/bower_components/AdminLTE/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
-        <!-- Theme style -->
-        <link rel="stylesheet" href="/bower_components/AdminLTE/dist/css/AdminLTE.min.css">
-        <!-- AdminLTE Skins. Choose a skin from the css/skins
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>AdminLTE 2 | Dashboard</title>
+    <!-- Tell the browser to be responsive to screen width -->
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <!-- Bootstrap 3.3.5 -->
+    <link rel="stylesheet" href="/bower_components/AdminLTE/bootstrap/css/bootstrap.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <!-- jvectormap -->
+    <link rel="stylesheet" href="/bower_components/AdminLTE/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="/bower_components/AdminLTE/dist/css/AdminLTE.min.css">
+    <!-- AdminLTE Skins. Choose a skin from the css/skins
              folder instead of downloading all of them to reduce the load. -->
-        <link rel="stylesheet" href="/bower_components/AdminLTE/dist/css/skins/_all-skins.min.css">
-
-        <link rel="stylesheet" href="/bower_components/angular-ui-notification/dist/angular-ui-notification.min.css">
-
-        <!-- Animate -->
-        <link rel="stylesheet" href="/bower_components/animate.css/animate.min.css">
-
-        <!-- Select2 -->
-        <link rel="stylesheet" href="/bower_components/select2/select2.css">
-        <link rel="stylesheet" href="/bower_components/select2/select2-bootstrap.css">
-
-        <!-- Bootstrap Duallistbox -->
-        <link rel="stylesheet" href="/bower_components/bootstrap-duallistbox/dist/bootstrap-duallistbox.min.css">
-
-        <!-- Summernote -->
-        <link rel="stylesheet" href="/bower_components/summernote/dist/summernote.css">
-
-        <script src="http://code.jquery.com/jquery.min.js"></script>        
-
-        <script src="/bower_components/angular/angular.min.js"></script>        
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
+    <link rel="stylesheet" href="/bower_components/AdminLTE/dist/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="/bower_components/angular-ui-notification/dist/angular-ui-notification.min.css">
+    <!-- Animate -->
+    <link rel="stylesheet" href="/bower_components/animate.css/animate.min.css">
+    <!-- Select2 -->
+    <link rel="stylesheet" href="/bower_components/select2/select2.css">
+    <link rel="stylesheet" href="/bower_components/select2/select2-bootstrap.css">
+    <!-- Bootstrap Duallistbox -->
+    <link rel="stylesheet" href="/bower_components/bootstrap-duallistbox/dist/bootstrap-duallistbox.min.css">
+    <!-- Summernote -->
+    <link rel="stylesheet" href="/bower_components/summernote/dist/summernote.css">
+    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="/bower_components/angular/angular.min.js"></script>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-    </head>
+</head>
 
-    <body class="hold-transition skin-blue sidebar-mini" ng-controller="MainController" ng-init="getAuthenticatedUser()">
-        <div class="wrapper">
-            <!-- Content Wrapper. Contains page content -->
-            <div class="content-wrapper">
-                <!-- Content Header (Page header) -->
-                <section class="content-header">
-                    <h1>General Form Elements<small>Preview</small></h1>
-                    <ol class="breadcrumb">
-                        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-                        <li><a href="#">Forms</a></li>
-                        <li class="active">General Elements</li>
-                    </ol>
-                </section>
-                <!-- Main content -->
-                <section class="content">
-                    <div ng-view></div>
-                </section>
-            </div>
+<body class="hold-transition skin-blue sidebar-mini" ng-controller="MainController" ng-init="getAuthenticatedUser()">
+    <div class="wrapper">
+        <!-- Content Wrapper. Contains page content -->
+        <div class="content-wrapper">
+            <!-- Content Header (Page header) -->
+            <section class="content-header">
+                <h1>General Form Elements<small>Preview</small></h1>
+                <ol class="breadcrumb">
+                    <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+                    <li><a href="#">Forms</a></li>
+                    <li class="active">General Elements</li>
+                </ol>
+            </section>
+            <!-- Main content -->
+            <section class="content">
+                <div ng-view></div>
+            </section>
         </div>
-        <!-- ngRoute -->
-        <script src="/bower_components/angular-route/angular-route.min.js"></script>
-        
-        <!-- Angular Animate -->
-        <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
-
-        <!-- Restangular -->
-        <script src="/bower_components/lodash/lodash.min.js"></script>
-        <script src="/bower_components/restangular/dist/restangular.min.js"></script>
-
-        <!-- Satellizer -->
-        <script src="/bower_components/satellizer/satellizer.min.js"></script>
-
-        <!-- Storage -->
-        <script src="/bower_components/ngstorage/ngStorage.min.js"></script>
-
-        <!-- Upload -->
-        <script src="/bower_components/ng-file-upload-shim/ng-file-upload-shim.min.js"></script> 
-        <script src="/bower_components/ng-file-upload/ng-file-upload.min.js"></script>
-
-        <!-- Notification -->
-        <script src="/bower_components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
-
-        <!-- Pagination -->
-        <script src="/bower_components/angularUtils-pagination/dirPagination.js"></script>
-
-        <!-- Select2 -->
-        <script src="/bower_components/select2/select2.min.js"></script> 
-        <script src="/bower_components/angular-ui-select2/src/select2.js"></script>
-
-        <!-- Summernote -->
-        <script src="/bower_components/summernote/dist/summernote.min.js"></script> 
-        <script src="/bower_components/angular-summernote/dist/angular-summernote.min.js"></script>
-
-        <!-- Bootstrap duallistbox -->
-        <script src="/bower_components/angular-bootstrap-duallistbox/dist/angular-bootstrap-duallistbox.min.js"></script> 
-        <script src="/bower_components/bootstrap-duallistbox/dist/jquery.bootstrap-duallistbox.min.js"></script>
-        
-        <!-- Bootstrap -->
-        <script src="/bower_components/AdminLTE/bootstrap/js/bootstrap.min.js"></script>    
-        
-        <!-- AdminLTE App -->
-        <script src="/bower_components/AdminLTE/dist/js/app.min.js"></script>
-        <script src="/dist/js/app.js"></script> 
-    </body>
+        <!-- /.content-wrapper -->
+        <footer class="main-footer">
+            <div class="pull-right hidden-xs">
+                <b>Version</b> 2.3.0
+            </div>
+            <strong>Copyright &copy; 2014-2015 <a ng-href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights reserved.
+        </footer>
+        <!-- Control Sidebar -->
+        <aside class="control-sidebar control-sidebar-dark">
+            <!-- Create the tabs -->
+            <ul class="nav nav-tabs nav-justified control-sidebar-tabs">
+                <li><a href="#control-sidebar-home-tab" data-toggle="tab"><i class="fa fa-home"></i></a></li>
+                <li><a href="#control-sidebar-settings-tab" data-toggle="tab"><i class="fa fa-gears"></i></a></li>
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <!-- Home tab content -->
+                <div class="tab-pane" id="control-sidebar-home-tab">
+                    <h3 class="control-sidebar-heading">Recent Activity</h3>
+                    <ul class="control-sidebar-menu">
+                        <li>
+                            <a href="javascript::;">
+                                <i class="menu-icon fa fa-birthday-cake bg-red"></i>
+                                <div class="menu-info">
+                                    <h4 class="control-sidebar-subheading">Langdon's Birthday</h4>
+                                    <p>Will be 23 on April 24th</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript::;">
+                                <i class="menu-icon fa fa-user bg-yellow"></i>
+                                <div class="menu-info">
+                                    <h4 class="control-sidebar-subheading">Frodo Updated His Profile</h4>
+                                    <p>New phone +1(800)555-1234</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript::;">
+                                <i class="menu-icon fa fa-envelope-o bg-light-blue"></i>
+                                <div class="menu-info">
+                                    <h4 class="control-sidebar-subheading">Nora Joined Mailing List</h4>
+                                    <p>nora@example.com</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript::;">
+                                <i class="menu-icon fa fa-file-code-o bg-green"></i>
+                                <div class="menu-info">
+                                    <h4 class="control-sidebar-subheading">Cron Job 254 Executed</h4>
+                                    <p>Execution time 5 seconds</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                    <!-- /.control-sidebar-menu -->
+                    <h3 class="control-sidebar-heading">Tasks Progress</h3>
+                    <ul class="control-sidebar-menu">
+                        <li>
+                            <a href="javascript::;">
+                                <h4 class="control-sidebar-subheading">Custom Template Design
+                                    <span class="label label-danger pull-right">70%</span>
+                                </h4>
+                                <div class="progress progress-xxs">
+                                    <div class="progress-bar progress-bar-danger" style="width: 70%"></div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript::;">
+                                <h4 class="control-sidebar-subheading">Update Resume
+                                    <span class="label label-success pull-right">95%</span>
+                                </h4>
+                                <div class="progress progress-xxs">
+                                    <div class="progress-bar progress-bar-success" style="width: 95%"></div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript::;">
+                                <h4 class="control-sidebar-subheading">Laravel Integration
+                                    <span class="label label-warning pull-right">50%</span>
+                                </h4>
+                                <div class="progress progress-xxs">
+                                    <div class="progress-bar progress-bar-warning" style="width: 50%"></div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript::;">
+                                <h4 class="control-sidebar-subheading">Back End Framework
+                                    <span class="label label-primary pull-right">68%</span>
+                                </h4>
+                                <div class="progress progress-xxs">
+                                    <div class="progress-bar progress-bar-primary" style="width: 68%"></div>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                    <!-- /.control-sidebar-menu -->
+                </div>
+                <!-- /.tab-pane -->
+                <!-- Settings tab content -->
+                <div class="tab-pane" id="control-sidebar-settings-tab">
+                    <form method="post">
+                        <h3 class="control-sidebar-heading">General Settings</h3>
+                        <div class="form-group">
+                            <label class="control-sidebar-subheading">
+                                Report panel usage
+                                <input type="checkbox" class="pull-right" checked>
+                            </label>
+                            <p>
+                                Some information about this general settings option
+                            </p>
+                        </div>
+                        <!-- /.form-group -->
+                        <div class="form-group">
+                            <label class="control-sidebar-subheading">
+                                Allow mail redirect
+                                <input type="checkbox" class="pull-right" checked>
+                            </label>
+                            <p>
+                                Other sets of options are available
+                            </p>
+                        </div>
+                        <!-- /.form-group -->
+                        <div class="form-group">
+                            <label class="control-sidebar-subheading">
+                                Expose author name in posts
+                                <input type="checkbox" class="pull-right" checked>
+                            </label>
+                            <p>
+                                Allow the user to show his name in blog posts
+                            </p>
+                        </div>
+                        <!-- /.form-group -->
+                        <h3 class="control-sidebar-heading">Chat Settings</h3>
+                        <div class="form-group">
+                            <label class="control-sidebar-subheading">
+                                Show me as online
+                                <input type="checkbox" class="pull-right" checked>
+                            </label>
+                        </div>
+                        <!-- /.form-group -->
+                        <div class="form-group">
+                            <label class="control-sidebar-subheading">
+                                Turn off notifications
+                                <input type="checkbox" class="pull-right">
+                            </label>
+                        </div>
+                        <!-- /.form-group -->
+                        <div class="form-group">
+                            <label class="control-sidebar-subheading">
+                                Delete chat history
+                                <a href="javascript::;" class="text-red pull-right"><i class="fa fa-trash-o"></i></a>
+                            </label>
+                        </div>
+                        <!-- /.form-group -->
+                    </form>
+                </div>
+                <!-- /.tab-pane -->
+            </div>
+        </aside>
+        <!-- /.control-sidebar -->
+        <!-- Add the sidebar's background. This div must be placed
+               immediately after the control sidebar -->
+        <div class="control-sidebar-bg"></div>
+    </div>
+    <!-- ngRoute -->
+    <script src="/bower_components/angular-route/angular-route.min.js"></script>
+    <!-- Angular Animate -->
+    <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
+    <!-- Restangular -->
+    <script src="/bower_components/lodash/lodash.min.js"></script>
+    <script src="/bower_components/restangular/dist/restangular.min.js"></script>
+    <!-- Satellizer -->
+    <script src="/bower_components/satellizer/satellizer.min.js"></script>
+    <!-- Storage -->
+    <script src="/bower_components/ngstorage/ngStorage.min.js"></script>
+    <!-- Upload -->
+    <script src="/bower_components/ng-file-upload-shim/ng-file-upload-shim.min.js"></script>
+    <script src="/bower_components/ng-file-upload/ng-file-upload.min.js"></script>
+    <!-- Notification -->
+    <script src="/bower_components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
+    <!-- Pagination -->
+    <script src="/bower_components/angularUtils-pagination/dirPagination.js"></script>
+    <!-- Select2 -->
+    <script src="/bower_components/select2/select2.min.js"></script>
+    <script src="/bower_components/angular-ui-select2/src/select2.js"></script>
+    <!-- Summernote -->
+    <script src="/bower_components/summernote/dist/summernote.min.js"></script>
+    <script src="/bower_components/angular-summernote/dist/angular-summernote.min.js"></script>
+    <!-- Bootstrap duallistbox -->
+    <script src="/bower_components/angular-bootstrap-duallistbox/dist/angular-bootstrap-duallistbox.min.js"></script>
+    <script src="/bower_components/bootstrap-duallistbox/dist/jquery.bootstrap-duallistbox.min.js"></script>
+    <!-- Bootstrap -->
+    <script src="/bower_components/AdminLTE/bootstrap/js/bootstrap.min.js"></script>
+    <!-- AdminLTE App -->
+    <script src="/bower_components/AdminLTE/dist/js/app.min.js"></script>
+    <script src="/dist/js/app.js"></script>
+</body>
 
 </html>
