--- a/views/admin/partials/category/edit.html
+++ b/views/admin/partials/category/edit.html
@@ -1,5 +1,3 @@
-{{-- resources/views/admin/category/edit.blade.php --}}
-
 <div ng-controller="CategoryController" ng-init="findEdit()">
 	<div class="row">
 		<div class="col-sm-6 col-md6 col-lg-6">
@@ -17,7 +15,7 @@
 					</div>
 					<div class="box-footer">
 						<button type="submit" class="btn btn-primary">Save</button>
-						<a ng-href="admin/category/create" class="btn btn-info pull-right"><i class="fa fa-plus"></i></a>
+						<a ng-href="/admin/category/create" class="btn btn-info pull-right"><i class="fa fa-plus"></i></a>
 					</div>
 				</form>
 			</div>
