--- a/views/admin/partials/post/create.jade
+++ b/views/admin/partials/post/create.jade
@@ -1,7 +1,7 @@
 div(ng-controller='PostController')
 	.row
 		.col-md-12.col-lg-12
-			form(autocomplete='off' ng-submit='createPost()')
+			form(autocomplete='off' ng-submit='create()')
 				.row
 					.col-sm-6.col-md-6.col-lg-6
 						.box.box-primary
