--- a/views/admin/partials/post/index.html
+++ b/views/admin/partials/post/index.html
@@ -5,7 +5,7 @@
 			<a ng-href="/admin/post/create" class="pull-right btn btn-success"><i class="fa fa-plus"></i></a>
 		</div>
 		<div class="box-body">
-			<table class="table table-hover table-striped datatable">
+			<table class="table table-hover table-striped">
 				<thead>
 					<tr>
 						<th>ID</th>
