--- a/views/admin/partials/profile/index.html
+++ b/views/admin/partials/profile/index.html
@@ -1,5 +1,3 @@
-{{-- resources/views/angular/admin/profile/index.blade.php --}}
-
 <div ng-controller="ProfileController" ng-init="setup()">
 	<div class="row">
 		<div class="col-sm-4 col-md-4 col-lg-4">
@@ -13,8 +11,8 @@
             	</div>
             	<div class="box-body no-padding" style="display: block;">
               		<ul class="nav nav-pills nav-stacked">
-                		<li><a href="#"><i class="fa fa-user"></i> @{{authUser.name}}</a></li>
-                		<li><a href="#"><i class="fa fa-envelope-o"></i> @{{authUser.email}}</a></li>
+                		<li><a href="#"><i class="fa fa-user"></i> {{authUser.name}}</a></li>
+                		<li><a href="#"><i class="fa fa-envelope-o"></i> {{authUser.email}}</a></li>
                 		<li><a href="#"><i class="fa fa-key"></i> <span ng-repeat="role in infoUser.roles" ng-bind="role.name"></span></a></li>
               		</ul>
             	</div><!-- /.box-body -->
@@ -24,12 +22,12 @@
             <form>
                 <div class="box">
                     <div class="box-body">
-                        <img ng-src="@{{authUser.image}}" width="150px">
+                        <img ng-src="{{authUser.image}}" width="150px">
                         <button class="btn btn-default" ngf-select="changeAvatar()" ng-model="avatar" ngf-min-height="80" ngf-max-size="2MB" accept="image/*"><i class="fa fa-camera"></i></button>
                         <p class="text-danger" ng-bind="errors.avatar"></p>
                         <div class="progress" ng-show="f.isUpload">
-                            <div ng-class="{'active':f.isProcess, 'progress-bar-striped':f.isProcess, 'progress-bar-success':f.isDone}" class="progress-bar" role="progressbar" aria-valuenow="@{{f.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: @{{f.progress}}%">
-                                <span>@{{f.progress}}% Complete</span>
+                            <div ng-class="{'active':f.isProcess, 'progress-bar-striped':f.isProcess, 'progress-bar-success':f.isDone}" class="progress-bar" role="progressbar" aria-valuenow="{{f.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{f.progress}}%">
+                                <span>{{f.progress}}% Complete</span>
                             </div>
                         </div>
                     </div>
