--- a/views/admin/sidebar.html
+++ b/views/admin/sidebar.html
@@ -1,5 +1,5 @@
 <!-- Left side column. contains the logo and sidebar -->
-<aside class="main-sidebar" ng-controller="NavigationController">
+<aside class="main-sidebar" ng-controller="NavigationController" ng-if="authUser != null">
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
         <!-- Sidebar user panel -->
