--- a/views/admin/sidebar.jade
+++ b/views/admin/sidebar.jade
@@ -1,5 +1,5 @@
 // Left side column. contains the logo and sidebar
-aside.main-sidebar(ng-controller='NavigationController')
+aside.main-sidebar(ng-controller='NavigationController' ng-if='authUser != null')
 	// sidebar: style can be found in sidebar.less
 	section.sidebar
 		// Sidebar user panel
