--- a/views/admin/header.html
+++ b/views/admin/header.html
@@ -18,13 +18,13 @@
                 <!-- User Account: style can be found in dropdown.less -->
                 <li class="dropdown user user-menu" ng-if="authUser != null">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="image/no-image.png" class="user-image" alt="User Image">
+                        <img ng-src="{{authUser.image}}" class="user-image" alt="User Image">
                         <span class="hidden-xs">Alexander Pierce</span>
                     </a>
                     <ul class="dropdown-menu">
                         <!-- User image -->
                         <li class="user-header">
-                            <img src="image/no-image.png" class="img-circle" alt="User Image">
+                            <img src="{{authUser.image}}" class="img-circle" alt="User Image">
                             <p>
                                 Alexander Pierce - Web Developer
                                 <small>Member since Nov. 2012</small>
