--- a/views/admin/partials/comment/index.html
+++ b/views/admin/partials/comment/index.html
@@ -1,5 +1,3 @@
-{{-- resources/views/angular/admin/comment/index.blade.php --}}
-
 <div class="row" ng-controller="CommentController" ng-init="init()">
 	<div class="col-sm-12 col-md-12 col-lg-12">
 		<div class="box box-default">
@@ -35,7 +33,7 @@
 							<td ng-bind="comment.post.name"></td>
 							<td>
 								<div class="btn-group">
-									<a class="btn btn-info" ng-href="/admin/comment/@{{comment.id}}/edit"><i class="fa fa-pencil"></i></a>
+									<a class="btn btn-info" ng-href="/admin/comment/{{comment.id}}/edit"><i class="fa fa-pencil"></i></a>
 									<a class="btn btn-danger" ng-click="remove(comment)"><i class="fa fa-trash"></i></a>
 								</div>
 
