--- a/views/admin/header.jade
+++ b/views/admin/header.jade
@@ -1,6 +1,6 @@
 header.main-header
 	// Logo
-	a.logo(href='index2.html')
+	a.logo(ng-href='/admin')
 		// mini logo for sidebar mini 50x50 pixels
 		span.logo-mini
 			b A
@@ -14,15 +14,21 @@ header.main-header
 		// Sidebar toggle button
 		a.sidebar-toggle(href='#' data-toggle='offcanvas' role='button')
 			span.sr-only Toggle navigation
+			|             
+			span.icon-bar
+			|             
+			span.icon-bar
+			|             
+			span.icon-bar
 		// Navbar Right Menu
 		.navbar-custom-menu
 			ul.nav.navbar-nav
 				// User Account: style can be found in dropdown.less
 				li.dropdown.user.user-menu(ng-if='authUser != null')
-					a.dropdown-toggle(href='#' data-toggle='dropdown')
+					a.dropdown-toggle(ng-href='#' data-toggle='dropdown')
 						img.user-image(ng-src='{{authUser.image}}' alt='User Image')
 						|                         
-						span.hidden-xs Alexander Pierce
+						span.hidden-xs(ng-bind='authUser.name')
 					|                     
 					ul.dropdown-menu
 						// User image
@@ -30,7 +36,7 @@ header.main-header
 							img.img-circle(src='{{authUser.image}}' alt='User Image')
 							|                             
 							p
-								| Alexander Pierce - Web Developer
+								| {{authUser.name}} - Web Developer
 								small Member since Nov. 2012
 						// Menu Body
 						li.user-body
