--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -14,15 +14,11 @@ html(lang='en' ng-app='Beep')
 		link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
 		// Ionicons
 		link(rel='stylesheet' href='https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css')
-		// jvectormap
-		link(rel='stylesheet' href='/bower_components/AdminLTE/plugins/jvectormap/jquery-jvectormap-1.2.2.css')
 		// Theme style
 		link(rel='stylesheet' href='/bower_components/AdminLTE/dist/css/AdminLTE.min.css')
-		//
-			AdminLTE Skins. Choose a skin from the css/skins
-			folder instead of downloading all of them to reduce the load.
+		// AdminLTE Skins. Choose a skin from the css/skins folder instead of downloading all of them to reduce the load.
 		link(rel='stylesheet' href='/bower_components/AdminLTE/dist/css/skins/_all-skins.min.css')
-		|     
+		// Notification
 		link(rel='stylesheet' href='/bower_components/angular-ui-notification/dist/angular-ui-notification.min.css')
 		// Animate
 		link(rel='stylesheet' href='/bower_components/animate.css/animate.min.css')
@@ -34,9 +30,11 @@ html(lang='en' ng-app='Beep')
 		link(rel='stylesheet' href='/bower_components/bootstrap-duallistbox/dist/bootstrap-duallistbox.min.css')
 		// Summernote
 		link(rel='stylesheet' href='/bower_components/summernote/dist/summernote.css')
-		|     
+		// Style
+		link(rel='stylesheet' href='/dist/css/qsoft.css')
+		// Jquery
 		script(src='http://code.jquery.com/jquery.min.js')
-		|     
+		// Angularjs
 		script(src='/bower_components/angular/angular.min.js')
 		// HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
 		// WARNING: Respond.js doesn't work if you view the page via file://
@@ -67,8 +65,7 @@ html(lang='en' ng-app='Beep')
 						|                     
 						li.active General Elements
 				// Main content
-				section.content
-					div(ng-view='')
+				section.content(class='{{pageClass}}' ng-view='')
 			// /.content-wrapper
 			footer.main-footer
 				.pull-right.hidden-xs
@@ -80,153 +77,7 @@ html(lang='en' ng-app='Beep')
 					a(ng-href='http://almsaeedstudio.com') Almsaeed Studio
 					| .
 				|  All rights reserved.
-			// Control Sidebar
-			aside.control-sidebar.control-sidebar-dark
-				// Create the tabs
-				ul.nav.nav-tabs.nav-justified.control-sidebar-tabs
-					li
-						a(href='#control-sidebar-home-tab' data-toggle='tab')
-							i.fa.fa-home
-					|                 
-					li
-						a(href='#control-sidebar-settings-tab' data-toggle='tab')
-							i.fa.fa-gears
-				// Tab panes
-				.tab-content
-					// Home tab content
-					#control-sidebar-home-tab.tab-pane
-						h3.control-sidebar-heading Recent Activity
-						|                     
-						ul.control-sidebar-menu
-							li
-								a(href='javascript::;')
-									i.menu-icon.fa.fa-birthday-cake.bg-red
-									|                                 
-									.menu-info
-										h4.control-sidebar-subheading Langdon's Birthday
-										|                                     
-										p Will be 23 on April 24th
-							|                         
-							li
-								a(href='javascript::;')
-									i.menu-icon.fa.fa-user.bg-yellow
-									|                                 
-									.menu-info
-										h4.control-sidebar-subheading Frodo Updated His Profile
-										|                                     
-										p New phone +1(800)555-1234
-							|                         
-							li
-								a(href='javascript::;')
-									i.menu-icon.fa.fa-envelope-o.bg-light-blue
-									|                                 
-									.menu-info
-										h4.control-sidebar-subheading Nora Joined Mailing List
-										|                                     
-										p nora@example.com
-							|                         
-							li
-								a(href='javascript::;')
-									i.menu-icon.fa.fa-file-code-o.bg-green
-									|                                 
-									.menu-info
-										h4.control-sidebar-subheading Cron Job 254 Executed
-										|                                     
-										p Execution time 5 seconds
-						// /.control-sidebar-menu
-						h3.control-sidebar-heading Tasks Progress
-						|                     
-						ul.control-sidebar-menu
-							li
-								a(href='javascript::;')
-									h4.control-sidebar-subheading
-										| Custom Template Design
-										span.label.label-danger.pull-right 70%
-									|                                 
-									.progress.progress-xxs
-										.progress-bar.progress-bar-danger(style='width: 70%')
-							|                         
-							li
-								a(href='javascript::;')
-									h4.control-sidebar-subheading
-										| Update Resume
-										span.label.label-success.pull-right 95%
-									|                                 
-									.progress.progress-xxs
-										.progress-bar.progress-bar-success(style='width: 95%')
-							|                         
-							li
-								a(href='javascript::;')
-									h4.control-sidebar-subheading
-										| Laravel Integration
-										span.label.label-warning.pull-right 50%
-									|                                 
-									.progress.progress-xxs
-										.progress-bar.progress-bar-warning(style='width: 50%')
-							|                         
-							li
-								a(href='javascript::;')
-									h4.control-sidebar-subheading
-										| Back End Framework
-										span.label.label-primary.pull-right 68%
-									|                                 
-									.progress.progress-xxs
-										.progress-bar.progress-bar-primary(style='width: 68%')
-						// /.control-sidebar-menu
-					// /.tab-pane
-					// Settings tab content
-					#control-sidebar-settings-tab.tab-pane
-						form(method='post')
-							h3.control-sidebar-heading General Settings
-							|                         
-							.form-group
-								label.control-sidebar-subheading
-									| Report panel usage
-									input.pull-right(type='checkbox' checked='')
-								|                             
-								p
-									| Some information about this general settings option
-							// /.form-group
-							.form-group
-								label.control-sidebar-subheading
-									| Allow mail redirect
-									input.pull-right(type='checkbox' checked='')
-								|                             
-								p
-									| Other sets of options are available
-							// /.form-group
-							.form-group
-								label.control-sidebar-subheading
-									| Expose author name in posts
-									input.pull-right(type='checkbox' checked='')
-								|                             
-								p
-									| Allow the user to show his name in blog posts
-							// /.form-group
-							h3.control-sidebar-heading Chat Settings
-							|                         
-							.form-group
-								label.control-sidebar-subheading
-									| Show me as online
-									input.pull-right(type='checkbox' checked='')
-							// /.form-group
-							.form-group
-								label.control-sidebar-subheading
-									| Turn off notifications
-									input.pull-right(type='checkbox')
-							// /.form-group
-							.form-group
-								label.control-sidebar-subheading
-									| Delete chat history
-									a.text-red.pull-right(href='javascript::;')
-										i.fa.fa-trash-o
-							// /.form-group
-					// /.tab-pane
-			// /.control-sidebar
-			//
-				Add the sidebar's background. This div must be placed
-				immediately after the control sidebar
-			.control-sidebar-bg
+			include control
 		// ngRoute
 		script(src='/bower_components/angular-route/angular-route.min.js')
 		// Angular Animate
@@ -264,4 +115,6 @@ html(lang='en' ng-app='Beep')
 		// AdminLTE App
 		script(src='/bower_components/AdminLTE/dist/js/app.min.js')
 		|     
+		script(src='/bower_components/AdminLTE/dist/js/demo.js')
+		// Angular App
 		script(src='/dist/js/app.js')
