--- a/views/admin/partials/profile/index.html
+++ b/views/admin/partials/profile/index.html
@@ -20,7 +20,7 @@
 		</div>
         <div class="col-sm-3 col-md-3 col-lg-3">
             <form>
-                <div class="box">
+                <div class="box box-info">
                     <div class="box-body">
                         <img ng-src="{{authUser.image}}" width="150px">
                         <button class="btn btn-default" ngf-select="changeAvatar()" ng-model="avatar" ngf-min-height="80" ngf-max-size="2MB" accept="image/*"><i class="fa fa-camera"></i></button>
