--- a/views/admin/partials/profile/index.jade
+++ b/views/admin/partials/profile/index.jade
@@ -33,7 +33,7 @@ div(ng-controller='ProfileController' ng-init='setup()')
 		|         
 		.col-sm-3.col-md-3.col-lg-3
 			form
-				.box
+				.box.box-info
 					.box-body
 						img(ng-src='{{authUser.image}}' width='150px')
 						|                         
