--- a/views/admin/partials/auth/login.html
+++ b/views/admin/partials/auth/login.html
@@ -12,6 +12,7 @@
 				<p class="text-danger" ng-bind="errors.password"></p>
 			</div>
 			<button class="btn btn-primary">Login</button>
+			<a ng-href="/admin/auth/register" class="btn btn-info">Register</a>
 		</form>
 	</div>
 
