--- a/views/admin/partials/auth/login.jade
+++ b/views/admin/partials/auth/login.jade
@@ -16,3 +16,5 @@ div(ng-controller='AuthController')
 				p.text-danger(ng-bind='errors.password')
 			| 			
 			button.btn.btn-primary Login
+			| 			
+			a.btn.btn-info(ng-href='/admin/auth/register') Register
