--- a/views/admin/partials/auth/register.html
+++ b/views/admin/partials/auth/register.html
@@ -20,7 +20,8 @@
 				<label for="password_confirmation">Password confirmation</label>
 				<input type="password" ng-model="reg.password_confirmation" class="form-control">
 			</div>
-			<button class="btn btn-primary">Register</button>
+			<button class="btn btn-info">Register</button>
+			<a ng-href="/admin/auth/login" class="btn btn-primary">Login</a>
 		</form>
 	</div>
 </div>
