--- a/views/admin/partials/auth/register.jade
+++ b/views/admin/partials/auth/register.jade
@@ -27,4 +27,6 @@ div(ng-controller='AuthController')
 				| 				
 				input.form-control(type='password' ng-model='reg.password_confirmation')
 			| 			
-			button.btn.btn-primary Register
+			button.btn.btn-info Register
+			| 			
+			a.btn.btn-primary(ng-href='/admin/auth/login') Login
