--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -11,9 +11,7 @@ html(lang='en' ng-app='Beep')
 		// Bootstrap 3.3.5
 		link(rel='stylesheet' href='/bower_components/AdminLTE/bootstrap/css/bootstrap.min.css')
 		// Font Awesome
-		link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
-		// Ionicons
-		link(rel='stylesheet' href='https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css')
+		link(rel='stylesheet' href='/bower_components/font-awesome/css/font-awesome.min.css')
 		// Theme style
 		link(rel='stylesheet' href='/bower_components/AdminLTE/dist/css/AdminLTE.min.css')
 		// AdminLTE Skins. Choose a skin from the css/skins folder instead of downloading all of them to reduce the load.
