--- a/views/admin/header.jade
+++ b/views/admin/header.jade
@@ -24,7 +24,7 @@ header.main-header
 		.navbar-custom-menu
 			ul.nav.navbar-nav
 				li
-					a(ng-href='/' target='_blank')
+					a(ng-href='http://localhost:8080/' target='_blank')
 						i.fa.fa-home
 						|  Home
 				// User Account: style can be found in dropdown.less
