--- a/views/admin/header.html
+++ b/views/admin/header.html
@@ -19,7 +19,7 @@
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">                
                 <li>
-                    <a ng-href="/" target="_blank"><i class="fa fa-home"></i> Home</a>
+                    <a ng-href="http://localhost:8080/" target="_blank"><i class="fa fa-home"></i> Home</a>
                 </li>
                 <!-- User Account: style can be found in dropdown.less -->
                 <li class="dropdown user user-menu" ng-if="authUser != null">
