--- a/views/admin/partials/partials/pagination.html
+++ b/views/admin/partials/partials/pagination.html
@@ -6,13 +6,13 @@
         <a href="" ng-click="setCurrent(pagination.current - 1)">&lsaquo;</a>
     </li>
     <li ng-repeat="pageNumber in pages track by $index" ng-class="{ active : pagination.current == pageNumber, disabled : pageNumber == '...' }">
-        <a href="" ng-click="setCurrent(pageNumber)">@{{ pageNumber }}</a>
+        <a ng-click="setCurrent(pageNumber)">{{ pageNumber }}</a>
     </li>
 
     <li ng-if="directionLinks" ng-class="{ disabled : pagination.current == pagination.last }">
         <a href="" ng-click="setCurrent(pagination.current + 1)">&rsaquo;</a>
     </li>
     <li ng-if="boundaryLinks"  ng-class="{ disabled : pagination.current == pagination.last }">
-        <a href="" ng-click="setCurrent(pagination.last)">&raquo;</a>
+        <a ng-click="setCurrent(pagination.last)">&raquo;</a>
     </li>
 </ul>
