--- a/views/admin/partials/user-manager/edit.html
+++ b/views/admin/partials/user-manager/edit.html
@@ -1,44 +1,36 @@
-{{-- resources/views/admin/user-manager/edit.blade.php --}}
+<div ng-controller="UserManagerController" ng-init="findEdit()">
+	<div class="row">
+		<div class="col-sm-6 col-md-6 col-lg-6">
 
-	<div ng-controller="UserManagerController" ng-init="findEdit()">
-		<div class="row">
-			<div class="col-sm-6 col-md-6 col-lg-6">
-
-				<div class="box box-primary">
-                    <div class="box-header with-border">
-                        <h3 class="box-title">Edit permission</h3>
-                    </div>
-                    <form autocomplete="off" ng-submit="update(formData)">
-                        <div class="box-body">
-                            <div class="form-group">
-                                <label for="name">Name</label>
-                                <input type="text" ng-model="formData.name" class="form-control">
-                                <p class="text-danger" ng-bind="error.name"></p>
-                            </div>
-                            <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="text" ng-model="formData.email" class="form-control">
-                                <p class="text-danger" ng-bind="error.email"></p>
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Password</label>
-                                <input type="password" ng-model="formData.password" class="form-control">
-                                <p class="text-danger" ng-bind="error.password"></p>
-                            </div>
-                            <div class="form-group">
-                                <label for="role">Role</label>
-                                <select ng-model="formData.roles" class="form-control" ui-select2>
-                                    <option ng-repeat="role in roles" value="@{{role.id}}" ng-bind="role.name"></option>
-                                </select>
-                                <p class="text-danger" ng-bind="error.roles"></p>
-                            </div>
-                        </div>
-                        <!-- /.box-body -->
-                        <div class="box-footer">
-                        	<button class="btn btn-primary">Save</button>
-                        </div>
-                    </form>
+			<div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Edit permission</h3>
                 </div>
+                <form autocomplete="off" ng-submit="update(formData)">
+                    <div class="box-body">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" ng-model="formData.name" class="form-control">
+                            <p class="text-danger" ng-bind="error.name"></p>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="text" ng-model="formData.email" class="form-control">
+                            <p class="text-danger" ng-bind="error.email"></p>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input type="password" ng-model="formData.password" class="form-control">
+                            <p class="text-danger" ng-bind="error.password"></p>
+                        </div>                        
+                    </div>
+                    <!-- /.box-body -->
+                    <div class="box-footer">
+                    	<button class="btn btn-primary">Save</button>
+                        <a ng-href="/admin/user-manager/create" class="btn btn-info pull-right"><i class="fa fa-plus"></i></a>
+                    </div>
+                </form>
             </div>
-		</div>
+        </div>
 	</div>
+</div>
