--- a/views/home/header.html
+++ b/views/home/header.html
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li ng-if="authUser == null" ><a ng-href="/auth/register" ng-class="{active:isActive('/auth/register')}">Register</a></li>
                 <li ng-if="authUser == null" ng-class="{active:isActive('/auth/login')}"><a data-toggle="modal" data-target="#myModal" ng-href="#">Log in</a></li>
-                <li ng-if="authUser != null" ng-class="{active:isActive('/users/view/' + authUser.id)}"><a ng-href="#" ng-bind="authUser.name"></a></li>
+                <li ng-if="authUser != null" ng-class="{active:isActive('/users/view/' + authUser.id)}"><a ng-href="#"><img ng-src="{{authUser.image}}" class="img-circle" width="20px"></a></li>
                 <li ng-if="authUser != null" ng-click="logout()"><a ng-href="#">Log out</a></li>
             </ul>
         </nav>
