--- a/views/admin/header.html
+++ b/views/admin/header.html
@@ -21,6 +21,9 @@
                 <li>
                     <a ng-href="http://localhost:8080/" target="_blank"><i class="fa fa-home"></i> Home</a>
                 </li>
+                <li ng-if="authUser == null" ng-class="{active:isActive('/admin/auth/login')}">
+                    <a ng-href="/admin/auth/login">Log in</a>
+                </li>
                 <!-- User Account: style can be found in dropdown.less -->
                 <li class="dropdown user user-menu" ng-if="authUser != null">
                     <a ng-href="#" class="dropdown-toggle" data-toggle="dropdown">
