--- a/views/home/layout.html
+++ b/views/home/layout.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="Beep">
+<html lang="en-US" ng-app="Beep">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Home</title>
+		<title ng-bind="(page_title || 'Home') + ' - QSoft Vietnam'"></title>
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" type="text/css" href="/assets/bower_components/bootstrap/dist/css/bootstrap.min.css">		
