--- a/views/home/layout.jade
+++ b/views/home/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en' ng-app='Beep')
+html(lang='en-US' ng-app='Beep')
 	head
 		meta(charset='utf-8')
 		| 		
@@ -7,7 +7,7 @@ html(lang='en' ng-app='Beep')
 		| 		
 		meta(name='viewport' content='width=device-width, initial-scale=1')
 		| 		
-		title Home
+		title(ng-bind="(page_title || 'Home') + ' - QSoft Vietnam'")
 		// Bootstrap CSS
 		link(rel='stylesheet' type='text/css' href='/assets/bower_components/bootstrap/dist/css/bootstrap.min.css')
 		// Font Awesome
